# ros2_rb1

actor_cmd_vel_plugin/: CMakeLists.txt  package.xml
actor_cmd_vel_plugin/src/: ActorCmdVelPlugin.cpp
rb1_description/: package.xml
rb1_description/config/: rb1_control.yaml
rb1_description/hooks/: rb1_description.dsv.in
rb1_description/robots/: rb1_robot.urdf.xacro  rb1_torso.urdf.xacro
rb1_description/urdf/sensors/: all_sensors.urdf.xacro  asus_xtion.urdf.xacro  hokuyo.urdf.xacro  imu.urdf.xacro  mic_array.urdf.xacro
rb1_gazebo/config/: gz_bridge_topics.yaml
rb1_gazebo/gui/: gui.config
rb1_gazebo/include/: ActorMovementSystem.hpp
rb1_gazebo/launch/: gazebo.launch.py  spawn.launch.py
rb1_gazebo/src/: ActorMovementSystem.cpp
rb1_gazebo/worlds/: leon_home.world
rb1_navigation/config/: nav2_params.yaml
rb1_navigation/launch/navigation/: bringup.launch.py  localization.launch.py  navigation.launch.py  slam.launch.py
rb1_navigation/maps/apartamento_leon/: apartamento_leon_gimp_con_mesa_tv.yaml
